--- a/Sequence Generator/src/main/resources/application.yml
+++ b/Sequence Generator/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     name: sequence-generator
 
   datasource:
-    url: jdbc:mysql://localhost:3306/sequence_generator
-    username: root
-    password: root
+    url: jdbc:mysql://54.224.1.57:3306/banking_team2
+    username: team2user
+    password: team2password
 
   jpa:
     hibernate:
@@ -14,5 +14,6 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
 server:
   port: 8083
