--- a/sequence-generator/src/main/resources/application.properties
+++ b/sequence-generator/src/main/resources/application.properties
@@ -2,9 +2,12 @@ spring.application.name=sequence-generator
 server.port=8085
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-spring.datasource.url=jdbc:mysql://54.224.1.57:3306/team2_user
-spring.datasource.username=team2user
-spring.datasource.password=team2password
+#spring.datasource.url=jdbc:mysql://54.224.1.57:3306/team2_user
+#spring.datasource.username=team2user
+#spring.datasource.password=team2password
+spring.datasource.url=jdbc:mysql://localhost:3306/sequence_generator
+spring.datasource.username=root
+spring.datasource.password=NewPassWord
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
