--- a/sequence-generator/src/main/resources/application.properties
+++ b/sequence-generator/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://54.242.99.68:3306/sequence_generator?createDa
 spring.datasource.username=team2user
 spring.datasource.password=team2password
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
