--- a/sequence-generator/src/main/resources/application.properties
+++ b/sequence-generator/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=team2password
 #spring.datasource.username=root
 #spring.datasource.password=NewPassWord
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
